# University

./: .gitignore  .gitmodules  README.md
III-course/II-sem/computational-geometry/: CMakeLists.txt  main.cpp  test.cpp
III-course/II-sem/computational-geometry/algorithm/: Algorithm.cpp  Algorithm.h
III-course/II-sem/computational-geometry/algorithm/src/: Algorithm.cpp
III-course/II-sem/computational-geometry/camera/: Camera.cpp  Camera.h
III-course/II-sem/computational-geometry/first_module/: glad.c  main.cpp
III-course/II-sem/computational-geometry/first_module/algorithm/: CMakeLists.txt
III-course/II-sem/computational-geometry/first_module/algorithm/include/: Algorithm.h
III-course/II-sem/computational-geometry/first_module/camera/: CMakeLists.txt
III-course/II-sem/computational-geometry/first_module/camera/include/: Camera.h
III-course/II-sem/computational-geometry/first_module/camera/src/: Camera.cpp
III-course/II-sem/computational-geometry/first_module/resources/: shader.vert
III-course/II-sem/computational-geometry/first_module/shader/include/: Shader.h
III-course/II-sem/computational-geometry/first_module/ui/: CMakeLists.txt
III-course/II-sem/computational-geometry/first_module/ui/include/: UI.h
III-course/II-sem/computational-geometry/first_module/ui/src/: DrawableObject.h  UI.cpp
III-course/II-sem/computational-geometry/first_module/utilities/: CMakeLists.txt
III-course/II-sem/computational-geometry/second_module/: CMakeLists.txt  main.cpp
III-course/II-sem/computational-geometry/second_module/algorithm/: CMakeLists.txt
III-course/II-sem/computational-geometry/second_module/algorithm/include/: Algorithm.h
III-course/II-sem/computational-geometry/second_module/algorithm/src/: Algorithm.cpp
III-course/II-sem/computational-geometry/second_module/camera/include/: Camera.h
III-course/II-sem/computational-geometry/second_module/camera/src/: Camera.cpp
III-course/II-sem/computational-geometry/second_module/imgui/: CMakeLists.txt
III-course/II-sem/computational-geometry/second_module/imgui/include/: imgui.h  imgui_impl_opengl3.h
III-course/II-sem/computational-geometry/second_module/imgui/src/: imgui_impl_glfw.cpp
III-course/II-sem/computational-geometry/second_module/implementation/splines/include/: UIImpl.h
III-course/II-sem/computational-geometry/second_module/implementation/splines/src/: UIImpl.cpp
III-course/II-sem/computational-geometry/second_module/implementation/surface/: CMakeLists.txt
III-course/II-sem/computational-geometry/second_module/implementation/surface/include/: UIImpl.h
III-course/II-sem/computational-geometry/second_module/implementation/surface/src/: UIImpl.cpp
III-course/II-sem/computational-geometry/second_module/resources/: shader.frag  shader3d.vert
III-course/II-sem/computational-geometry/second_module/shader/include/: Shader.h
III-course/II-sem/computational-geometry/second_module/shader/src/: Shader.cpp
III-course/II-sem/computational-geometry/second_module/tinynurbs/: CMakeLists.txt
III-course/II-sem/computational-geometry/second_module/tinynurbs/include/core/: check.h
III-course/II-sem/computational-geometry/second_module/ui/: CMakeLists.txt
III-course/II-sem/computational-geometry/second_module/ui/include/: ReportManager.h  UI.h
III-course/II-sem/computational-geometry/second_module/ui/src/: DrawableObject.cpp  DrawableObject.h  DrawableObject3D.cpp  DrawableObject3D.h  DrawableObserver.cpp  DrawableObserver.h  ReportManager.cpp  UI.cpp
III-course/II-sem/computational-geometry/second_module/utilities/: CMakeLists.txt
III-course/II-sem/computational-geometry/second_module/utilities/include/: AlgorithmUtility.h  GLFWUtility.h
III-course/II-sem/computational-geometry/second_module/utilities/src/: AlgorithmUtility.cpp  GLFWUtility.cpp
III-course/II-sem/computational-geometry/shader/: CMakeLists.txt  Shader.cpp  Shader.h
III-course/II-sem/computational-geometry/shader/src/: Shader.cpp
III-course/II-sem/computational-geometry/ui/: DrawableObject.cpp  DrawableObject.h  DrawableObserver.cpp  DrawableObserver.h  UI.cpp  UI.h
III-course/II-sem/computational-geometry/ui/include/: UI.h
III-course/II-sem/computational-geometry/ui/src/: DrawableObject.cpp  DrawableObserver.h
III-course/II-sem/computational-geometry/utilities/include/: GLFWUtility.h
III-course/II-sem/computational-geometry/utilities/src/: GLFWUtility.cpp
III-course/II-sem/cryptology/: CMakeLists.txt
III-course/II-sem/cryptology/hash-function/: CMakeLists.txt
III-course/II-sem/cryptology/hash-function/include/: md4.h
III-course/II-sem/cryptology/hash-function/src/: md4.cpp
III-course/II-sem/cryptology/number-theory/: CMakeLists.txt
III-course/II-sem/cryptology/number-theory/include/: montgomery_arithmetic.h  number_theory.h
III-course/II-sem/cryptology/number-theory/src/: montgomery_arithmetic.cpp  number_theory.cpp
III-course/II-sem/cryptology/symmetric-block-cipher/: CMakeLists.txt
III-course/II-sem/cryptology/symmetric-block-cipher/include/: des.h  des_cbc.h  des_data.h  des_key.h
III-course/II-sem/cryptology/symmetric-block-cipher/src/: des.cpp  des_cbc.cpp
III-course/II-sem/cryptology/tests/: CMakeLists.txt
III-course/II-sem/cryptology/tests/hash-function/: CMakeLists.txt  md4-test.cpp
III-course/II-sem/cryptology/tests/number-theory/: CMakeLists.txt  binary-power-test.cpp  extended-euclidean-test.cpp  karatsuba-test.cpp  montgomery-arithmetic-test.cpp  prime-test.cpp
III-course/II-sem/cryptology/tests/symmetric-block-cipher/: CMakeLists.txt  des-test.cpp
III-course/OOP/Lab2/: acknowledgment.md
III-course/databases/I-lab/: main.c
III-course/numerical-methods/I-lab/: solve-nonlinear-eq.py
III-course/numerical-methods/II-lab/: solve-system-of-linear-equations.py
III-course/numerical-methods/V-lab/: modified-euler-method.py
III-course/stuctural-theory-of-digital-automaton/I-lab/: Lab1NOR_AND.ms14
III-course/stuctural-theory-of-digital-automaton/II-lab/: trigger.ms14
IV-course/II-semester/math-bases-of-inf-protec/lab-1/c/: CMakeLists.txt  input.txt  main.c
(+199 files in other folders)
